--- a/firebase.json
+++ b/firebase.json
@@ -11,29 +11,11 @@
         "source": "**",
         "destination": "/index.html"
       }
-    ],
-    "headers": [
-      {
-        "source": "**/*.@(jpg|jpeg|gif|png|svg|webp)",
-        "headers": [
-          {
-            "key": "Cache-Control",
-            "value": "max-age=31536000"
-          }
-        ]
-      },
-      {
-        "source": "**/*.@(js|css)",
-        "headers": [
-          {
-            "key": "Cache-Control",
-            "value": "max-age=31536000"
-          }
-        ]
-      }
     ]
   },
   "firestore": {
+    "database": "(default)",
+    "location": "asia-south2",
     "rules": "firestore.rules",
     "indexes": "firestore.indexes.json"
   }
